# esp_zephyr

./: gdbinit
boards/common/: esp32c.board.cmake
boards/xtensa/esp32/: esp32.dts
boards/xtensa/esp32c/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  esp32c.dts  esp32c.yaml  esp32c_defconfig
cmake/toolchain/esp32c/: generic.cmake
drivers/bluetooth/: Kconfig
drivers/bluetooth/hci/: Kconfig  h4.c
drivers/entropy/: Kconfig  Kconfig.esp32c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.esp32c  gpio_esp32c.c
drivers/hwinfo/: CMakeLists.txt  Kconfig
drivers/i2c/: Kconfig  Kconfig.esp32c
drivers/pinmux/: CMakeLists.txt  Kconfig  Kconfig.esp32c  pinmux_esp32c.c
drivers/pwm/: Kconfig  Kconfig.esp32c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.esp32c  uart_esp32.c  uart_esp32c.c
drivers/watchdog/: CMakeLists.txt  Kconfig  Kconfig.esp32c  wdt_esp32c.c
dts/bindings/gpio/: espressif,esp32c-gpio.yaml
dts/bindings/i2c/: espressif,esp32c-i2c.yaml
dts/bindings/pinctrl/: espressif,esp32c-pinmux.yaml
dts/bindings/rng/: espressif,esp32c-trng.yaml
dts/bindings/serial/: espressif,esp32c-uart.yaml
dts/bindings/watchdog/: espressif,esp32c-watchdog.yaml
dts/xtensa/espressif/: esp32c.dtsi
include/linker/: common-ram.ld  common-rom.ld
include/toolchain/: gcc.h
kernel/: init.c
scripts/west_commands/runners/: __init__.py  esp32c.py
subsys/bluetooth/: CMakeLists.txt
subsys/bluetooth/esp_bluetooth/hci/: CMakeLists.txt  Kconfig  bt.c  esp_zephyr_hci.c  esp_zephyr_hci.h
subsys/bluetooth/host/: att.c  hci_core.c  l2cap.c
(+10 files in other folders)
